--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <nav class="container desktopMenu">
             <div class="container">
                 <div class="mainMenu">
-                    <a class="activeMenu" href="index2.html">Accueil</a>
+                    <a class="activeMenu" href="index.html">Accueil</a>
                     <a href="formationEleves.html">Élèves</a>
                     <a href="formationsPro.html">Professionnels</a>
                     <a href="modeles.html">Modèles</a>
