(master) refactor the menu Eleves

--- a/financementsEleves.html
+++ b/financementsEleves.html
@@ -190,50 +190,63 @@
         <main>
             <div class="container">
                 <div class="row">
-                    <div class="col">
-                        <div class="row">
-                            <div class="header1">
-                                <div>
-                                    <h3>Comment financer votre formation ?</h3>
-                                    <p>Il y a plusieurs sources de financements possibles pour votre formation.
-                                    Nous pouvons vous conseiller pour trouver celle qui vous conviendra le plus.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="efcontents">
-                                <h3>Vous êtes salarié ?</h3>
-                                <div class="salaries">
-                                    <h4>Le Congé Individuel de Formation (CIF)</h4><br>
-                                    <p>Le CIF permet à toute personne qui travaille de suivre une formation d'un an à temps plein</p><br>
-                                    <p>L'employeur ne peut refuser votre départ en formation mais il peut le reporter dans certain cas.
-                                         Pour bénéficier d'un CIF vous devez transmettre une demande d'autorisation d'absence à votre employeur.
-                                         Une fois l'autorisation d'absence reçue, il vous faut maintenant obtenir l'accord de financement par 
-                                        les organismes paritaires agrées par l'Etat. Pour cela vous devez vous adresser au Fongecif ou dans certains
-                                         cas à l'Opacif auprès duquel votre entreprise cotise.</p><br>
-                                    <h4>Le CIF-CDD</h4><br>
-                                    <p>Pour tout contrat à durée déterminée achevé depuis moins d'un an. Il est possible de bénéficier d'un Congé Individuel de Formation (CIF-CDD) d'un an maximum, sous réserve d'une ancienneté suffisante :<br><br>
-                                        - de 24 mois, consécutifs ou non, en qualité de salarié, quelle que soit la nature des contrats, au cours des 5 dernières années.<br>
-                                        - dont 4 mois, consécutifs ou non, sous CDD, au cours des 12 derniers mois.<br><br>
-                                    Il est possible de se renseigner auprès de Pôle Emploi ou de votre dernier employeur qui doit vous remettre un "bordereau individuel d'accès à la formation" (BIAF), ou de Pôle Emploi. La rémunération pendant le CIF CDD
-                                est calculée en fonction de la dernière rémunération perçue.</p>
-                                </div><br>
-                                <h3>Vous êtes demandeur d'emploi ?</h3>
-                                <div class="salaries">
-                                    <p>Pôle Emploi peut financer les formations des demandeurs d'emploi inscrits et indemnisés au titre de l'assurance chômage (l'ARE).</p>
-                                </div><br>
-                                <h3>Prêt Personnel</h3>
-                                <div class="salariesimg">
-                                    <img src="assets/images/Caisse_Epargnejpg.jpg">
-                                    <p>La caisse d'Epargne peut financer votre formation :<br>
-                                    Contacter M. Alexandre AYISS<br>
-                                    01 71 82 44 92<br>
-                                    Alexandre.ayissi@ceidf.caisse-epargne.fr</p>
-                                </div>
-                            </div>
+                    <div class="header1">
+                        <div>
+                            <h3>Comment financer votre formation ?</h3>
+                            <p>Il y a plusieurs sources de financements possibles pour votre formation.
+                                Nous pouvons vous conseiller pour trouver celle qui vous conviendra le plus.</p>
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col efcontents">
+                        <h3>Vous êtes salarié ?</h3>
+                        <div class="salaries">
+                            <h5>Le Congé Individuel de Formation (CIF)</h5>
+                            <p>Le CIF permet à toute personne qui travaille de suivre une formation d'un an à
+                                temps plein</p>
+                            <p>L'employeur ne peut refuser votre départ en formation mais il peut le reporter
+                                dans certain cas.
+                                Pour bénéficier d'un CIF vous devez transmettre une demande d'autorisation
+                                d'absence à votre employeur.
+                                Une fois l'autorisation d'absence reçue, il vous faut maintenant obtenir
+                                l'accord de financement par
+                                les organismes paritaires agrées par l'Etat. Pour cela vous devez vous adresser
+                                au Fongecif ou dans certains
+                                cas à l'Opacif auprès duquel votre entreprise cotise.</p>
+                            <h5>Le CIF-CDD</h5>
+                            <p>Pour tout contrat à durée déterminée achevé depuis moins d'un an. Il est
+                                possible de bénéficier d'un Congé Individuel de Formation (CIF-CDD) d'un an
+                                maximum, sous
+                                réserve d'une ancienneté suffisante :</p>
+                            <ul>
+                                <li>de 24 mois, consécutifs ou non, en qualité de salarié, quelle que soit la
+                                    nature des contrats, au cours des 5 dernières années.</li>
+                                <li>dont 4 mois, consécutifs ou non, sous CDD, au cours des 12 derniers
+                                    mois</li>
+                            </ul>
+                            <p>Il est possible de se renseigner auprès de Pôle Emploi ou de votre dernier
+                                employeur qui doit vous remettre un "bordereau individuel d'accès à la
+                                formation" (BIAF), ou de Pôle Emploi. La rémunération pendant le CIF CDD
+                                est calculée en fonction de la dernière rémunération perçue.</p>
+                        </div>
+                        <h3>Vous êtes demandeur d'emploi ?</h3>
+                        <div class="salaries">
+                            <p>Pôle Emploi peut financer les formations des demandeurs d'emploi inscrits et
+                                indemnisés au titre de l'assurance chômage (l'ARE).</p>
+                        </div>
+                        <h3>Prêt Personnel</h3>
+                        <div class="salaries">
+                            <div class="salariesimg"><img src="assets/images/Caisse_Epargnejpg.jpg"></div>
+
+                            <p>La caisse d'Epargne peut financer votre formation :<br>
+                                Contacter M. Alexandre AYISS<br>
+                                01 71 82 44 92<br>
+                                Alexandre.ayissi@ceidf.caisse-epargne.fr</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </main>
         <footer class="container footer">
