(master) contact front

--- a/financementsEleves.html
+++ b/financementsEleves.html
@@ -249,14 +249,21 @@
 
             </div>
         </main>
-        <footer class="container footer">
-            <div class="coordonnees container">
-                <p class="adresse">Body Academy - 105 boulevard Chanzy - 93100 Montreuil | contact@bodyacademy.fr</p>
-                <p class="underline"></p>
-                <p class="renseignements">Renseignements : 09 50 60 95 08</p>
-                <p class="designers">Design by <a href="https://www.linkedin.com/in/alex-lap-tran-082a8b17b/"
-                        target="_blank">Alex Tran, </a> <a href="https://www.linkedin.com/in/ronan-le-discot-982267120/"
-                        target="_blank">Ronan Le Discot</a></p>
+        <footer class="footer container">
+            <div class="row">
+                <div class="col">
+                    <p class="adresse">Body Academy - 105 boulevard Chanzy - 93100 Montreuil |
+                        contact@bodyacademy.fr
+                    </p>
+                    <p class="underline"></p>
+                    <p class="renseignements">Renseignements : 09 50 60 95 08</p>
+                    <p class="designers">Design by <a href="https://www.linkedin.com/in/alex-lap-tran-082a8b17b/"
+                            target="_blank">Alex
+                            Tran,
+                        </a> <a href="https://www.linkedin.com/in/ronan-le-discot-982267120/" target="_blank">Ronan
+                            Le
+                            Discot</a></p>
+                </div>
             </div>
         </footer>
     </div>
