--- a/origine.html
+++ b/origine.html
@@ -206,34 +206,51 @@
 			</div>
 
 			<div class="container">
-				<p>Body Academy Paris est né de mon exaspération. Jeune femme camerounaise très coquette, j’ai pris
-					l’habitude depuis
-					plusieurs années de me coiffer moi-même par insatisfaction du service proposé pour mes cheveux
-					crépus.
-					Par peur et par manque de confiance envers les coiffeurs. Cette personne saura t elle s’occuper de
-					mes cheveux ?
-					Est-elle compétente ? Saura t elle me conseiller correctement en tenant compte de mes cheveux?
-					A-t-elle était formé ?
-					Quel produit va-t-elle utiliser? Saura-t-elle être douce avec mon cuir chevelu…
-				</p>
-				<p>
-					J’ai constaté que mes collègues et amis européens bénéficiant d’une réelle expertise de leur cheveu
-					(et leur cuir
-					chevelu) changent de coiffure, font des couleurs différentes et ont un grand choix de salon.
-					En effet, pour avoir l’honneur d’être coiffeur de cheveux caucasiens la personne doit suivre une
-					formation de minimum 1
-					à 2 ans.
-					Aujourd’hui nous confions nos cheveux crépus, frisés à des personnes qui ont peu de formation ou qui
-					sont « sans diplôme
-					».
-					Confiriez-vous votre santé, vos yeux, vos oreilles à un médecin qui a fait 20 jours de formation ou
-					qui a suivi des
-					modules…avec de la chance?…
-					Attention, je ne dis pas qu’avec le diplôme la satisfaction client est garantie, toutefois y a des
-					erreurs, qui ne
-					pourront être commises.
-				</p>
+				<div class="row">
+					<div class="col">
+						<p>Body Academy Paris est né de mon exaspération. Jeune femme camerounaise très coquette, j’ai
+							pris
+							l’habitude depuis
+							plusieurs années de me coiffer moi-même par insatisfaction du service proposé pour mes
+							cheveux
+							crépus.
+							Par peur et par manque de confiance envers les coiffeurs. Cette personne saura t elle
+							s’occuper
+							de
+							mes cheveux ?
+							Est-elle compétente ? Saura t elle me conseiller correctement en tenant compte de mes
+							cheveux?
+							A-t-elle était formé ?
+							Quel produit va-t-elle utiliser? Saura-t-elle être douce avec mon cuir chevelu…
+						</p>
+						<p>
+							J’ai constaté que mes collègues et amis européens bénéficiant d’une réelle expertise de leur
+							cheveu
+							(et leur cuir
+							chevelu) changent de coiffure, font des couleurs différentes et ont un grand choix de salon.
+							En effet, pour avoir l’honneur d’être coiffeur de cheveux caucasiens la personne doit suivre
+							une
+							formation de minimum 1
+							à 2 ans.
+							Aujourd’hui nous confions nos cheveux crépus, frisés à des personnes qui ont peu de
+							formation ou
+							qui
+							sont « sans diplôme
+							».
+							Confiriez-vous votre santé, vos yeux, vos oreilles à un médecin qui a fait 20 jours de
+							formation
+							ou
+							qui a suivi des
+							modules…avec de la chance?…
+							Attention, je ne dis pas qu’avec le diplôme la satisfaction client est garantie, toutefois y
+							a
+							des
+							erreurs, qui ne
+							pourront être commises.
+						</p>
+					</div>
 
+				</div>
 
 				<div class="sliderOrigineContainer">
 					<div class="sliderOrigine">
@@ -250,37 +267,58 @@
 					</div>
 				</div>
 
+				<div class="row">
+					<div class="col">
+						<p>Riche de ce regard critique et très exigeante ; un salon n’était pas suffisant. J’ai donc
+							cherché
+							une
+							autre solution,
+							plus complète, plus approfondie, plus définitive. La solution qui fera que peu importe
+							l’origine, le
+							cheveu bénéficie de
+							la même qualité de traitement et de soin.
+						</p>
+						<blockquote class="highlightQuote">
+							<p><b>Ma volonté</b> : que le cheveu crépu, frisé soit traité à la même hauteur, au même
+								niveau
+								d’exigeante,
+								d’expertise, de
+								professionnalisme, de qualité de service que n’importe quel autre cheveu.
+							</p>
+							<p><b>La solution</b> :
+								l’éducation, une véritable formation complète.</p>
+						</blockquote>
 
-				<p>Riche de ce regard critique et très exigeante ; un salon n’était pas suffisant. J’ai donc cherché une
-					autre solution,
-					plus complète, plus approfondie, plus définitive. La solution qui fera que peu importe l’origine, le
-					cheveu bénéficie de
-					la même qualité de traitement et de soin.
-				</p>
-				<p><b>Ma volonté</b> : que le cheveu crépu, frisé soit traité à la même hauteur, au même niveau
-					d’exigeante,
-					d’expertise, de
-					professionnalisme, de qualité de service que n’importe quel autre cheveu.
-				</p>
-				<p><b>La solution</b> :
-					l’éducation, une véritable formation complète.</p>
-				<p>Afin que je puisse confier mes cheveux,
-					mon cuir chevelu (ma beauté divine) à une personne experte du sujet et en toute
-					confiance.
-					Body Academy Paris = centre de formation qui apporte des réponses d’abord sur le cheveu puis sur le
-					reste du corps.</p>
+						<p>Afin que je puisse confier mes cheveux,
+							mon cuir chevelu (ma beauté divine) à une personne experte du sujet et en toute
+							confiance.
+							Body Academy Paris, c'est un centre de formation qui apporte des réponses d’abord sur le
+							cheveu
+							puis
+							sur le
+							reste du corps.</p>
+					</div>
+
+				</div>
 			</div>
 
 
 		</main>
-		<footer class="container footer">
-			<div class="coordonnees container">
-				<p class="adresse">Body Academy - 105 boulevard Chanzy - 93100 Montreuil | contact@bodyacademy.fr</p>
-				<p class="underline"></p>
-				<p class="renseignements">Renseignements : 09 50 60 95 08</p>
-				<p class="designers">Design by <a href="https://www.linkedin.com/in/alex-lap-tran-082a8b17b/"
-						target="_blank">Alex Tran, </a> <a href="https://www.linkedin.com/in/ronan-le-discot-982267120/"
-						target="_blank">Ronan Le Discot</a></p>
+		<footer class="footer container">
+			<div class="row">
+				<div class="col">
+					<p class="adresse">Body Academy - 105 boulevard Chanzy - 93100 Montreuil |
+						contact@bodyacademy.fr
+					</p>
+					<p class="underline"></p>
+					<p class="renseignements">Renseignements : 09 50 60 95 08</p>
+					<p class="designers">Design by <a href="https://www.linkedin.com/in/alex-lap-tran-082a8b17b/"
+							target="_blank">Alex
+							Tran,
+						</a> <a href="https://www.linkedin.com/in/ronan-le-discot-982267120/" target="_blank">Ronan
+							Le
+							Discot</a></p>
+				</div>
 			</div>
 		</footer>
 	</div>
