(master) changes after pull request

--- a/label.html
+++ b/label.html
@@ -176,10 +176,24 @@
             </div>
         </div>
 
+        <!-- Desktop Sub Menu Nav -->
+        <nav class="container desktopSubMenu">
+            <div class="container">
+                <div class="subMenu">
+                    <a class="activeSubMenu" href="label.html">Le Label</a>
+                    <a href="salon.html">Le Salon</a>
+                </div>
+            </div>
+        </nav>
+
         <main>
             <div class="container">
 
-                <h1>Contenu à fournir.</h1>
+                <br><br><br><br><br><br><br>
+                <div class="row">
+                    <h1>Contenu à fournir</h1>
+                </div>
+                <br><br><br><br><br><br><br>
 
             </div>
         </main>
